# PencilSketch

./: CMakeLists.txt  README.md  base.h  main.cpp  pencil.h  stroke.cpp  stroke.h  textual.cpp  textual.h  tone.cpp  tone.h
